[build-rev] overview links

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -115,9 +115,9 @@
                 <h1 id="overview">Overview</h1>
 <p>Here you will read these main topics:</p>
 <ul>
-<li>Fundamentals</li>
-<li>Docking</li>
-<li>Widgets</li>
+<li><a href="/ekg-docs/layout/#fundamentals">Fundamentals</a></li>
+<li><a href="/ekg-docs/layout/#docking">Docking</a></li>
+<li><a href="/ekg-docs/layout/#widgets">Widgets</a></li>
 </ul>
 <h1 id="fundamentals">Fundamentals</h1>
 <p>The layout mask or docking system, is an internal feature of the layout service, A layout mask is a mask of positions between rectangles of a widget. The purpose of having a layout mask is to make flexible widgets.</p>
